--- a/configs/router_nd.conf
+++ b/configs/router_nd.conf
@@ -1,12 +1,5 @@
-PCAEntryPoint = {
-  path = "/nethome/lblokhin/pca/target/scala-2.11/pca-scala-assembly-1.3.2-SNAPSHOT.jar"
-  className = "com.jiwire.pca.PcaEntryPoint$"
-  namespace = "PCA_EP-EntryPonitTest"
+simple-context = {
+  path = "./examples/target/scala-2.11/mist_examples_2.11-0.10.0.jar"
+  className = "SimpleContext$"
+  namespace = "foo"
 }
-
-PCAEntryPointShort = {
-  path = "/nethome/lblokhin/pca/target/scala-2.11/pca-scala-assembly-1.3.2-SNAPSHOT.jar"
-  className = "com.jiwire.pca.PcaEntryPoint$"
-  namespace = "PCA_EP-EntryPonitTestShort"
-}
-
