http host to 0.0.0.0

--- a/configs/docker.conf
+++ b/configs/docker.conf
@@ -91,7 +91,7 @@ mist.context.PCA_EP-EntryPonitTestShort.spark-conf = {
 }
 
 mist.http.on = true
-mist.http.host = "localhost"
+mist.http.host = "0.0.0.0"
 mist.http.port = 2003
 mist.http.router-config-path = "configs/router_nd.conf"
 
