setup docker and singularity json

--- a/configs/docker.conf
+++ b/configs/docker.conf
@@ -106,16 +106,16 @@ mist.recovery.multilimit = 10
 mist.recovery.typedb = "MapDb"
 mist.recovery.dbfilename = "file.db"
 
-mist.workers.runner = "docker" #"manual" #"local" or "docker"
+mist.workers.runner = "local" #"manual" #"local" or "docker"
 mist.workers.cmd = """${MIST_HOME}/scripts/singularity start --namespace $MIST_WORKER_NAMESPACE --config $MIST_WORKER_CONFIG --jar $MIST_WORKER_JAR_PATH  --run-options $MIST_WORKER_RUN_OPTIONS """
-mist.workers.host = "localhost" # default for unix socker
-mist.workers.port = 80
+mist.workers.docker-host = "localhost" # default for unix socker
+mist.workers.docker-port = 80
 
 mist.context.context-defaults.timeout = 180 min
 
 mist.context-defaults.disposable = true
 mist.context-defaults.worker-downtime = 190 min
-mist.context-defaults.run-options = "--packages com.nd.location:api:1.2.9-SNAPSHOT,mysql:mysql-connector-java:6.0.5,com.jiwire:jiwire-grs:3.1.0-SNAPSHOT --exclude-packages com.jiwire:jicore --jars /nethome/lblokhin/jars/postgresql-8.4-703.jdbc3.jar"
+mist.context-defaults.run-options = "--repositories http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire-snapshots,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jicore --packages com.nd.location:api:1.2.9-SNAPSHOT,mysql:mysql-connector-java:6.0.5,com.jiwire:jiwire-grs:3.1.0-SNAPSHOT --exclude-packages com.jiwire:jicore --jars /nethome/lblokhin/jars/postgresql-8.4-703.jdbc3.jar"
 
 
 
