--- a/configs/router_nd.conf
+++ b/configs/router_nd.conf
@@ -1,5 +1,5 @@
 simple-context = {
-  path = "./examples/target/scala-2.11/mist_examples_2.11-0.10.0.jar"
-  className = "SimpleContext$"
+  path = "/nethome/lblokhin/pca/target/scala-2.11/pca-scala.jar"
+  className = "com.jiwire.pca.PcaEntryPoint$"
   namespace = "foo"
 }
