--- a/configs/docker.1.conf
+++ b/configs/docker.1.conf
@@ -108,7 +108,6 @@ mist.recovery.dbfilename = "file.db"
 
 mist.workers.runner = "manual" #"manual" #"local" or "docker"
 mist.workers.cmd = """${MIST_HOME}/scripts/singularity start --namespace $MIST_WORKER_NAMESPACE --config $MIST_WORKER_CONFIG --jar $MIST_WORKER_JAR_PATH  --run-options $MIST_WORKER_RUN_OPTIONS """
-mist.workers.cmd-stop = """${MIST_HOME}/scripts/singularity stop --namespace $MIST_WORKER_NAMESPACE """
 mist.workers.docker-host = "localhost" # default for unix socker
 mist.workers.docker-port = 80
 
@@ -125,7 +124,7 @@ mist.akka {
     log-remote-lifecycle-events = off
     log-recieved-messages = off
     netty.tcp {
-      hostname = "10.21.49.207"
+      hostname = "leader"
     }
     transport-failure-detector {
       heartbeat-interval = 30s
@@ -135,7 +134,7 @@ mist.akka {
   # Event handlers to register at boot time (Logging$DefaultLogger logs to STDOUT)
   loggers = ["akka.event.Logging$DefaultLogger"]
   cluster {
-    seed-nodes = ["akka.tcp://mist@10.21.49.207:2551"]
-    auto-down-unreachable-after = 600s
+    seed-nodes = ["akka.tcp://mist@leader:2551"]
+    auto-down-unreachable-after = 10s
   }
 }
