--- a/configs/router_nd.conf
+++ b/configs/router_nd.conf
@@ -3,3 +3,9 @@ simple-context = {
   className = "com.jiwire.pca.PcaEntryPoint$"
   namespace = "foo"
 }
+
+example = {
+  path = "/nethome/lblokhin/jars/mist_examples_2.11-0.8.0.jar"
+  className = "SimpleContext$"
+  namespace = "example"
+}
