--- a/configs/docker_worker.conf
+++ b/configs/docker_worker.conf
@@ -106,7 +106,7 @@ mist.recovery.multilimit = 10
 mist.recovery.typedb = "MapDb"
 mist.recovery.dbfilename = "file.db"
 
-mist.workers.runner = "manual" #"manual" #"local" or "docker"
+mist.workers.runner = "local" #"manual" #"local" or "docker"
 mist.workers.cmd = """${MIST_HOME}/scripts/singularity start --namespace $MIST_WORKER_NAMESPACE --config $MIST_WORKER_CONFIG --jar $MIST_WORKER_JAR_PATH  --run-options $MIST_WORKER_RUN_OPTIONS """
 mist.workers.cmd-stop = """${MIST_HOME}/scripts/singularity stop --namespace $MIST_WORKER_NAMESPACE """
 mist.workers.docker-host = "localhost" # default for unix socker
@@ -125,7 +125,7 @@ mist.akka {
     log-remote-lifecycle-events = off
     log-recieved-messages = off
     netty.tcp {
-      hostname = "10.21.49.207"
+      hostname = "my_host"
     }
     transport-failure-detector {
       heartbeat-interval = 30s
