--- a/configs/pca-mist.conf
+++ b/configs/pca-mist.conf
@@ -1,7 +1,4 @@
-mist.context.context-defaults.timeout = 180 min
-
-mist.context-defaults.disposable = true
-mist.context-defaults.worker-downtime = 190 min
+mist.context-defaults.downtime = 190 min
 mist.context-defaults.run-options = "--repositories http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire-snapshots,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jicore --packages com.nd.location:api:1.2.9-SNAPSHOT,mysql:mysql-connector-java:6.0.5,com.jiwire:jiwire-grs:3.1.0-SNAPSHOT --exclude-packages com.jiwire:jicore --jars /usr/share/external_jars/postgresql-8.4-703.jdbc3.jar"
 
 mist.context-defaults.spark-conf = {
@@ -96,8 +93,7 @@ mist.context.PCA_EP-EntryPonitTestShort.spark-conf = {
 
 mist.http.on = true
 mist.http.host = "0.0.0.0"
-mist.http.port = 2003
-mist.http.router-config-path = "/usr/share/external_configs/router-pca-mist.conf"
+mist.http.port = 2004
 
 mist.mqtt.on = true
 mist.mqtt.host = "rabbitmq.9dev.io"
@@ -108,5 +104,9 @@ mist.mqtt.publish-topic = "pca_mist_pub"
 mist.recovery.on = false
 
 mist.workers.runner = "manual" 
-mist.workers.cmd = """${MIST_HOME}/scripts/singularity start --namespace $MIST_WORKER_NAMESPACE """
-mist.workers.cmd-stop = """${MIST_HOME}/scripts/singularity stop --namespace $MIST_WORKER_NAMESPACE """
+; mist.workers.cmd = """${MIST_HOME}/scripts/singularity start --namespace $MIST_WORKER_NAMESPACE """
+; mist.workers.cmd-stop = """${MIST_HOME}/scripts/singularity stop --namespace $MIST_WORKER_NAMESPACE """
+mist.workers.cmd = """${MIST_HOME}/../../scripts/singularity start --namespace $MIST_WORKER_NAME """
+mist.workers.cmdStop = """${MIST_HOME}/../../scripts/singularity stop --namespace $MIST_WORKER_NAME """
+
+mist.workers.runner-init-timeout = 480 seconds
