fix singularity workers mode

--- a/configs/router-pca-mist.conf
+++ b/configs/router-pca-mist.conf
@@ -1,6 +1,9 @@
 jar_path = ${MIST_HOME}"/mist-examples-spark2.jar"
 py_path = ${MIST_HOME}"/examples-python"
 
+pca_jar_path = "/usr/share/external_jars/pca-scala-1.18-SNAPSHOT.jar"
+pca_class_name = "com.jiwire.pca.PcaMistEntryPoint$"
+
 simple-context = {
   path = ${jar_path}
   className = "SimpleContext$"
@@ -13,8 +16,68 @@ simple-context-py = {
   namespace = "foo"
 }
 
-pca-context = {
-  path = "/usr/share/external_jars/pca-scala-assembly-1.3.2-SNAPSHOT.jar"
-  className = "com.jiwire.pca.PcaEntryPoint$"
-  namespace = "pca-context-from-ui"
+pca-default = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "pca-default"
+}
+
+pca-create-ref-tables = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-Create_Ref_Tables"
+}
+
+pca-filter-ida-task = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-filter_IDA_task"
+}
+
+pca-filter-ca-event-task = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-filter_CA_events_task"
+}
+
+pca-filter-events-task = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-filter_events_task"
+}
+
+pca-write-new-events = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-write_new_events"
+}
+
+pca-filter-ref-tables = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-filter_ref_tables"
+}
+
+pca-run-task = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-PCA_run_task"
+}
+
+pca-output-task = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-output_taskAll"
+}
+
+pca-event-log-tracking = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-EventLogTracking"
+}
+
+pca-test-paraccel = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "PCA_EP-TestParaccel"
 }
