shared contexts config for pca-scala

--- a/configs/router-pca-mist.conf
+++ b/configs/router-pca-mist.conf
@@ -22,6 +22,18 @@ pca-default = {
   namespace = "pca-default"
 }
 
+pca-default-exclusive = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "pca-default-exclusive"
+}
+
+pca-default-shared = {
+  path = ${pca_jar_path}
+  className = ${pca_class_name}
+  namespace = "pca-default-shared"
+}
+
 pca-create-ref-tables = {
   path = ${pca_jar_path}
   className = ${pca_class_name}
