--- a/configs/pca-mist.conf
+++ b/configs/pca-mist.conf
@@ -24,7 +24,7 @@ mist {
   context-defaults {
     downtime = 190 min
     run-options = "--repositories http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jiwire-snapshots,http://eng-01.jiwiredev.com:5050/nexus/content/repositories/jicore --packages com.nd.location:api:1.2.9-SNAPSHOT,mysql:mysql-connector-java:6.0.5,com.jiwire:jiwire-grs:3.1.0-SNAPSHOT --exclude-packages com.jiwire:jicore --jars /usr/share/external_jars/postgresql-8.4-703.jdbc3.jar"
-    worker-mode = "exclusive"
+    worker-mode = "shared"
     spark-conf = {
       spark.cores.max = 1500
       spark.mesos.executor.memoryOverhead = 1000
@@ -96,6 +96,21 @@ mist {
   
     PCA_EP-TestParaccel.spark-conf = {
       spark.cores.max = 1500
+    }
+    
+    pca-default-exclusive {
+      worker-mode = "exclusive"
+      spark-conf = {
+        spark.cores.max = 500
+      }
+    }
+    
+    
+    pca-default-shared {
+      worker-mode = "shared"
+      spark-conf = {
+        spark.cores.max = 500
+      }
     }
   }
 }
