add pca-python in docker

--- a/configs/router-pca-mist.conf
+++ b/configs/router-pca-mist.conf
@@ -93,3 +93,9 @@ pca-test-paraccel = {
   className = ${pca_class_name}
   namespace = "PCA_EP-TestParaccel"
 }
+
+pca-wrapper = {
+  path = "/usr/share/external_jars/pca-wrapper.py"
+  className = "PcaWrapper"
+  namespace = "pca-default"
+}
